--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>FlexBox Example</title>
 </head>
 <body>
-    <h1>Css3Flex</h1>
-    <div class="container">
+    <h1>FlexBox Containers.</h1>
+    <div class="flexbox-container">
     <div class="flexbox-item flexbox-item-1"></div>
     <div class="flexbox-item flexbox-item-2"></div>
     <div class="flexbox-item flexbox-item-3"></div>
+    <div class="axis main-axis"></div>
+    <div class="axis cross-axis"></div>
 
     </div>
     
